index file updated

--- a/index.html
+++ b/index.html
@@ -28,8 +28,64 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
-      <!-- Timeblocks go here -->    
+    <div class="container mb-3">
+      <!-- Timeblocks starts -->    
+    <div id="hours9" class="row time-block">      
+        <div class="d-flex col-12 col-md-1 hour justify-content-center align-items-center">9 AM</div>
+        <textarea id="txthours9" class="col-12 col-md-10 description"></textarea>
+        <button class="col-12 col-md-1 saveBtn"><i class="fas fa-save"></i></button>        
+    </div>
+
+    <div id="hours10" class="row time-block">      
+      <div class="d-flex col-12 col-md-1 hour justify-content-center align-items-center">10 AM</div>
+      <textarea id="txthours10" class="col-12 col-md-10 description"></textarea>
+      <button class="col-12 col-md-1 saveBtn"><i class="fas fa-save"></i></button>        
+    </div>
+
+    <div id="hours11" class="row time-block">      
+      <div class="d-flex col-12 col-md-1 hour justify-content-center align-items-center">11 AM</div>
+      <textarea id="txthours11" class="col-12 col-md-10 description"></textarea>
+      <button class="col-12 col-md-1 saveBtn"><i class="fas fa-save"></i></button>        
+    </div>
+
+    <div id="hours12" class="row time-block">      
+      <div class="d-flex col-12 col-md-1 hour justify-content-center align-items-center">12 PM</div>
+      <textarea id="txthours12" class="col-12 col-md-10 description"></textarea>
+      <button class="col-12 col-md-1 saveBtn"><i class="fas fa-save"></i></button>        
+    </div>
+
+    <div id="hours13" class="row time-block">      
+      <div class="d-flex col-12 col-md-1 hour justify-content-center align-items-center">1 PM</div>
+      <textarea id="txthours13" class="col-12 col-md-10 description"></textarea>
+      <button class="col-12 col-md-1 saveBtn"><i class="fas fa-save"></i></button>        
+    </div>
+
+    <div id="hours14" class="row time-block">      
+      <div class="d-flex col-12 col-md-1 hour justify-content-center align-items-center">2 PM</div>
+      <textarea id="txthours14" class="col-12 col-md-10 description"></textarea>
+      <button class="col-12 col-md-1 saveBtn"><i class="fas fa-save"></i></button>        
+    </div>
+
+    <div id="hours15" class="row time-block">      
+      <div class="d-flex col-12 col-md-1 hour justify-content-center align-items-center">3 PM</div>
+      <textarea id="txthours15" class="col-12 col-md-10 description"></textarea>
+      <button class="col-12 col-md-1 saveBtn"><i class="fas fa-save"></i></button>        
+    </div>
+
+    <div id="hours16" class="row time-block">      
+      <div class="d-flex col-12 col-md-1 hour justify-content-center align-items-center">4 PM</div>
+      <textarea id="txthours16" class="col-12 col-md-10 description"></textarea>
+      <button class="col-12 col-md-1 saveBtn"><i class="fas fa-save"></i></button>        
+    </div>
+
+    <div id="hours17" class="row time-block">      
+      <div class="d-flex col-12 col-md-1 hour justify-content-center align-items-center">5 PM</div>
+      <textarea id="txthours17" class="col-12 col-md-10 description"></textarea>
+      <button class="col-12 col-md-1 saveBtn"><i class="fas fa-save"></i></button>        
+    </div>
+
+  </div>
+  <!-- Timeblocks ends -->    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
